wpform base style spacing issue fix

--- a/src/themes/reen/assets/include/scss/wp/components/_contact-form.scss
+++ b/src/themes/reen/assets/include/scss/wp/components/_contact-form.scss
@@ -40,7 +40,7 @@
         }
 
         &-small:not( textarea ) {
-            .wpforms-container & {
+            .wpforms-container .wpforms-field-container & {
                 max-width: 100%;
 
                 @include media-breakpoint-up(md) {
@@ -50,7 +50,7 @@
         }
 
         &-medium:not( textarea ) {
-            .wpforms-container & {
+            .wpforms-container .wpforms-field-container & {
                 max-width: 100%;
 
                 @include media-breakpoint-up(md) {
@@ -79,7 +79,7 @@
         margin-bottom: 0;
 
         &-container {
-            .wpforms-container & {
+            .wpforms-container .wpforms-form & {
                 padding: 0;
             }
         }
